@@ -1,3 +1,9 @@
+2002-01-14  Kevin Kenny  <kennykb@users.sourceforge.net>
+
+	* gregorian.tcl, gregorian.test (EYMWDToJulianDay):
+	Added functionality for 'Nth weekday from the end of a month',
+	needed, among other things, to do DST rules in most US locales.
+	
 2002-01-11  Kevin Kenny  <kennykb@users.sourceforge.net>
 
 	* ChangeLog, calendar.tcl, gregorian.tcl, gregorian.test:
